src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__program_implicit_downcast.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
warning[E067]: Implicit downcast from 'LINT' to 'INT'.
   ┌─ <internal>:10:17
   │
10 │                 var1_lint, // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LINT' to 'INT'.

warning[E067]: Implicit downcast from 'LWORD' to 'DWORD'.
   ┌─ <internal>:11:17
   │
11 │                 var_lword, // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LWORD' to 'DWORD'.

warning[E067]: Implicit downcast from 'INT' to 'SINT'.
   ┌─ <internal>:13:17
   │
13 │                 INT#var1_lint, // downcast
   │                 ^^^^^^^^^^^^^ Implicit downcast from 'INT' to 'SINT'.

warning[E067]: Implicit downcast from 'LINT' to 'INT'.
   ┌─ <internal>:14:17
   │
14 │                 var2_lint, // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LINT' to 'INT'.

error[E037]: Invalid assignment: cannot assign 'WSTRING' to 'STRING'
   ┌─ <internal>:15:17
   │
15 │                 var_wstr, // invalid
   │                 ^^^^^^^^ Invalid assignment: cannot assign 'WSTRING' to 'STRING'

warning[E067]: Implicit downcast from 'LINT' to 'DINT'.
   ┌─ <internal>:16:17
   │
16 │                 var1_lint // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LINT' to 'DINT'.
